--- a/Client code/MobileSocial/AndroidManifest.xml
+++ b/Client code/MobileSocial/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <!-- 在SDCard中创建与删除文件权限 -->  
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />  
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
