Add implementations to sendMsg(), not the system support send Image and Audio type message.

--- a/Client code/MobileSocial/.settings/org.eclipse.core.resources.prefs
+++ b/Client code/MobileSocial/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/com/user/AudioTransportation.java=UTF-8
 encoding//src/com/user/ImageTransportation.java=UTF-8
+encoding//src/com/user/WebServiceAPI.java=UTF-8
