--- a/Server code/MobileSocialServer/.classpath
+++ b/Server code/MobileSocialServer/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="libs/sqljdbc4.jar"/>
 	<classpathentry kind="lib" path="libs/sun.misc.BASE64Decoder.jar"/>
 	<classpathentry kind="lib" path="libs/java-json.jar"/>
+	<classpathentry kind="lib" path="libs/mail.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
