--- a/Client code/MobileSocial/bin/AndroidManifest.xml
+++ b/Client code/MobileSocial/bin/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.yg.ui.MainActivity"
+            android:name="com.yg.ui.MainActivity1"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,6 +43,18 @@
         <activity
             android:name="com.yg.ui.Forget"
             android:label="@string/title_activity_forget" >
+        </activity>
+        <activity
+            android:name="com.yg.ui.MainActivity"
+            android:label="@string/title_activity_main" >
+        </activity>
+        <activity
+            android:name="com.yg.ui.FriendListActivity"
+            android:label="@string/title_activity_friend_list" >
+        </activity>
+        <activity
+            android:name="com.yg.ui.RecentDialogActivity"
+            android:label="@string/title_activity_recent_dialog" >
         </activity>
     </application>
 
