--- a/Client code/MobileSocial/AndroidManifest.xml
+++ b/Client code/MobileSocial/AndroidManifest.xml
@@ -116,8 +116,12 @@
         </activity>
         <activity
             android:name="com.yg.ui.login.LoginGuideActivity"
-            android:label="@string/title_activity_login" 
-            android:theme="@style/login_animation_style">
+            android:label="@string/title_activity_login"
+            android:theme="@style/login_animation_style" >
+        </activity>
+        <activity
+            android:name="com.yg.ui.signup.SignupActivity"
+            android:label="@string/title_activity_signup" >
         </activity>
     </application>
 
