--- a/Client code/MobileSocial/bin/AndroidManifest.xml
+++ b/Client code/MobileSocial/bin/AndroidManifest.xml
@@ -88,7 +88,7 @@
         </activity>
         <activity
             android:name="com.yg.ui.friendlist.FriendListActivity"
-            android:label="@string/title_activity_friend_list">
+            android:label="@string/title_activity_friend_list" >
         </activity>
         <activity
             android:name="com.yg.ui.recentdialog.RecentDialogActivity"
@@ -126,6 +126,10 @@
         <activity
             android:name="com.yg.ui.dialog.DialogActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.yg.ui.friendlist.FriendDetailActivity"
+            android:label="@string/title_activity_friend_detail" >
         </activity>
     </application>
 
