--- a/Client code/MobileSocial/.classpath
+++ b/Client code/MobileSocial/.classpath
@@ -7,6 +7,7 @@
 	<classpathentry kind="lib" path="libs/BaiduLBS_Android.jar"/>
 	<classpathentry kind="lib" path="libs/ksoap2-android-assembly-2.6.4-jar-with-dependencies.jar"/>
 	<classpathentry kind="lib" path="libs/android-viewbadger.jar"/>
+	<classpathentry kind="lib" path="libs/pinyin4j-2.5.0.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="output" path="bin/classes"/>
