--- a/Client code/MobileSocial/AndroidManifest.xml
+++ b/Client code/MobileSocial/AndroidManifest.xml
@@ -132,6 +132,8 @@
         <activity android:name="com.lj.songpuzzle.ActivitySongPuzzle" />
         <activity android:name="com.lj.bazingaball.ActivityBazingaBall" android:noHistory="true" />
         <activity android:name="com.lj.networktest.ActivityNetworkError" />
+        
+        <activity android:name="com.yg.image.preview.ImagePreviewActivity" />
     </application>
 
 </manifest>
