--- a/Client code/MobileSocial/AndroidManifest.xml
+++ b/Client code/MobileSocial/AndroidManifest.xml
@@ -124,7 +124,8 @@
         </activity>
         <activity android:name="com.tp.ui.ImageZoomInActivity" />
         <activity android:name="com.lj.shake.ActivityShake" />
-        <activity android:name="com.lj.settings.ActivitySettings"/>
+        <activity android:name="com.lj.settings.ActivitySettings"
+             android:theme="@style/lj_setting_theme"/>
         <activity android:name="com.lj.setting.userinfo.ActivitySexSetting" />
         <activity android:name="com.lj.setting.userinfo.ActivityAgeSetting" />
         <activity android:name="com.lj.setting.userinfo.ActivityHometownSetting" />
