--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /Server code/MobileSocialServer/bin
 /Server code/MobileSocialServer/.metadata
 *.pyc
+MaintainServer/.idea
 issues.txt
 issues2.txt
 
