Update .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /Client code/MobileSocial/gen
 /Server code/MobileSocialServer/bin
 /Server code/MobileSocialServer/.metadata
+/Client code/MobileSocial/.classpath
+/Client code/MobileSocial/project.properties
 issues.txt
 issues2.txt
 
