--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 /Client code/MobileSocial/project.properties
 /Client code/MobileSocial/SocialSDKLibraryProject/bin
 /Client code/MobileSocial/SocialSDKLibraryProject/gen
+/Client code/MobileSocial/SocialSDKLibraryProject/.classpath
+/Client code/MobileSocial/SocialSDKLibraryProject/project.properties
 issues.txt
 issues2.txt
 
