--- a/Client code/MobileSocial/AndroidManifest.xml
+++ b/Client code/MobileSocial/AndroidManifest.xml
@@ -179,8 +179,10 @@
         <activity android:name="com.lj.driftbottle.ui.MyBottle" />
         <activity android:name="com.lj.driftbottle.ui.PickupBottle" />
         <activity android:name="com.lj.driftbottle.ui.chuck_animation" />
-        <activity android:name="com.lj.driftbottle.ui.BottleInfoActivity" />
-        <activity android:name="com.lj.driftbottle.ui.DriftBottleActivity" />
+        <activity android:name="com.lj.driftbottle.ui.BottleInfoActivity" 
+            android:windowSoftInputMode="adjustPan"/>
+        <activity android:name="com.lj.driftbottle.ui.DriftBottleActivity" 
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name="com.yg.image.preview.ImagePreviewActivity" />
         <activity
             android:name="com.yg.videochat.VideoChatActivity"
